--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -26,7 +26,7 @@ button{
     padding: 5px 10px;
 }
 .lis{
-    border: 1px #ccc solid ;
+    border: 1px rgb(156, 156, 156) solid ;
     margin: 10px 0px;
     padding: 15px;
 }
